# unity-sprite-author

./: .gitattributes  .gitignore  .gitmodules  .md-orphan  BENCHMARKS.md  CLAUDE.md  Cargo.toml  MIGRATION.md  README.md  TODO.md  justfile
benches/: pipeline.rs
crates/cli/: Cargo.toml
crates/cli/src/: color_png.rs  color_synth.rs  main.rs  watch.rs
crates/core/: Cargo.toml
crates/core/benches/: pipeline.rs
crates/core/examples/: drift_report.rs  migrate_corpus.rs  regen_offline.rs  sma_dumper.cs
crates/core/src/: combine.rs  fab.rs  lib.rs  manifest.rs  mesh_emit.rs  mesh_manifest.rs  meta.rs  pipeline.rs  render_data.rs
crates/core/tests/: e2e_meow_tower.rs  golden_fab_silloutte.rs  golden_fab_treasure_trove.rs  golden_parity.rs  golden_sma_mesh.rs  v2_schema.rs
crates/core/tests/golden/fab/silloutte/: PremiumCat_Vampire_Popup.tps  PremiumCat_Vampire_Popup.tpsheet  README.md  Silloutte1.prefab  Silloutte2.prefab
crates/core/tests/golden/fab/treasure_trove/: TT_LobbyCell_BG.prefab  TreasureTrove.tps.fab.json  TreasureTrove.tpsheet
crates/core/tests/golden/orgel/: README.md
crates/core/tests/golden/orgel/sprites/: CahmpaignBottle.asset  CatMagic__Body.asset  CatMagic__CakePiece.asset  CatMagic__CapeRight.asset  CatMagic__LeftHand.asset  CatMagic__RightHand.asset  CatRock__Face.asset  CatRock__Phone.asset  CatSleep__Head.asset  CatSleep__LeftHand.asset  CatUnicorn__CapeRight.asset  CatUnicorn__Head.asset  ChampaignGlass__Deco.asset  ChampaignGlass__Glass.asset  ChampaignGlass__Glow.asset  ChampaignGlass__Hand.asset  CurtainBalloons__BalloonsRight.asset  Eclair.asset  FloorDecor__Shadow_1.asset  Mirrorball__Right.asset  Table__BottomRight.asset  Table__TrayLeft.asset  Table__TrayRight.asset
crates/editor/: Cargo.toml
crates/editor/src/: action.rs  app.rs  atlas.rs  command_palette.rs  doc.rs  inspector.rs  main.rs  menubar.rs  ops.rs  picker.rs  preferences.rs  preview.rs  selection.rs  serialize.rs  theme.rs  tree_panel.rs
crates/editor/tests/: app_ops.rs  round_trip_goldens.rs
crates/pack/: Cargo.toml
crates/pack/src/: color_png.rs  color_synth.rs  lib.rs
crates/watch/: Cargo.toml
crates/watch/src/: lib.rs  watchman.rs
docs/: byte-format.md  fab.md  sma-migration.md  unity-probes.md
examples/: csa_dump_to_fab.rs  csa_dumper.cs  csa_to_fab.rs  drift_report.rs  fab_verify.rs  migrate_corpus.rs  probe_formulas.rs  probe_offset.rs  regen_offline.rs  sma_dump_to_mesh_manifest.rs  sma_dumper.cs
scripts/: delete-authoring.sh  migrate-prefix-to-tpsheet.sh  migrate-tpsheet-meta.sh  regen-corpus.sh
src/: combine.rs  emit.rs  fab.rs  ffi.rs  lib.rs  manifest.rs  mesh_emit.rs  mesh_manifest.rs  meta.rs  pipeline.rs  render_data.rs  tps.rs  tpsheet.rs  triangulator.rs  yaml.rs
tests/: e2e_meow_tower.rs  golden_fab_pa_clock.rs  golden_fab_silloutte.rs  golden_fab_treasure_trove.rs  golden_manifest_v3_silloutte.rs  golden_parity.rs  golden_sma_mesh.rs  v2_schema.rs
tests/golden/fab/pa_clock/: PA_InfinitePencil_Clock.asset  PencilAdPopup_InfinitePencil.tps  PencilAdPopup_InfinitePencil.tps.fab.json  PencilAdPopup_InfinitePencil.tpsheet
tests/golden/fab/silloutte/: PremiumCat_Vampire_Popup.tps.fab.json  PremiumCat_Vampire_Popup.tps.fab.v3.json  README.md  Silloutte1.asset  Silloutte2.asset  Silloutte3.asset  Silloutte3.prefab
tests/golden/fab/treasure_trove/: TT_Cabinet_Top.prefab  TT_LobbyCell_Floor.prefab  TT_LobbyCell_Frame.prefab  TreasureTrove.tps
tests/golden/orgel/: Orgel.tps  Orgel.tpsheet
tests/golden/orgel/sprites/: Cake__Base.asset  Cake__DecoLeft.asset  Cake__DecoRight.asset  CatMagic__CapeLeft.asset  CatMagic__Face.asset  CatMagic__Head.asset  CatMagic__Stool.asset  CatRock__BodyLeft.asset  CatRock__BodyRight.asset  CatRock__Hand.asset  CatRock__Head.asset  CatRock__HeadPhone.asset  CatRock__SunGlass.asset  CatSleep__Cookie.asset  CatSleep__Face.asset  CatSleep__RightHand.asset  CatUnicorn__BodyBottom.asset  CatUnicorn__BodyTop.asset  CatUnicorn__CapeLeft.asset  CatUnicorn__Face.asset  CatUnicorn__Stool.asset  CatUnicorn__Whistle.asset  Cookie.asset  CurtainBalloons__BalloonsLeft.asset  CurtainBalloons__Curtain.asset  Firework__Bottom.asset  Firework__Left.asset  Firework__Right.asset  FloorDecor__Shadow_2.asset  Macaron.asset  Mirrorball__Left.asset  Table__BottomLeft.asset  Table__Confetti_1.asset  Table__Confetti_2.asset  Table__Confetti_3.asset  Table__Confetti_4.asset  Table__Confetti_5.asset  Table__Confetti_6.asset  Table__Top.asset
tests/golden/sma/box_29_ghost/: Box_29_Ghost.asset
