[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/editor"]

[profile.release]
panic = "unwind"
lto = "thin"
codegen-units = 1
strip = false

# Bench profile: optimized like release but with debug info so flamegraphs
# resolve symbols. Run e.g.:
#   cargo bench
#   cargo flamegraph --bench pipeline -- --bench
[profile.bench]
debug = true
