[package]
name = "unity-sprite-author-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "unity-sprite-author"
path = "src/main.rs"

# `unity-assetdb` mints `.tps.meta` / `.png.meta` on first-time packs outside
# the Unity Editor. `default-features = false` skips its `cli` feature so we
# don't transitively pull clap. Vendored as a git submodule under `vendor/`.
#
# `unity-watch` (its own vendored submodule) is the shared Watchman wire layer
# driving the `watch` subcommand — see `src/watch.rs`. It's referenced by path
# here AND, as a git dep, by the vendored unity-assetdb; the root Cargo.toml's
# `[patch]` redirects that git URL to this same submodule so both resolve to
# one copy (the watchman daemon coalesces the OS watch at runtime regardless).
#
# `tps-core` is the canonical TexturePacker `.tps` DOM (vendored from the `tps`
# repo). We use `list_file_lists` for pre-pack color-PNG synthesis and the
# `watch` subcommand's source-folder discovery — the rlib keeps its own
# hand-rolled, single-field spriteScale extractor (per CLAUDE.md's "library
# deps held to serde" policy on `core`).
[dependencies]
unity-sprite-author = { path = "../core" }
unity-assetdb = { path = "../../vendor/unity-assetdb", default-features = false }
unity-watch = { path = "../../vendor/unity-watch" }
tps-core = { path = "../../vendor/tps/crates/core" }
