[package]
name = "unity-sprite-author-cli"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "unity-sprite-author"
path = "src/main.rs"

# `unity-sprite-author-pack` is the shared pre-pack synthesis + TexturePackerCLI
# shell-out (also used by the boxcat bridge). `unity-assetdb` mints
# `.tps.meta` / `.png.meta` on first-time packs outside the Unity Editor
# (`default-features = false` skips its `cli` feature so we don't transitively
# pull clap; it git-deps `unity-watch`, redirected to vendor/unity-watch by the
# root `[patch]`).
[dependencies]
unity-sprite-author = { path = "../core" }
unity-sprite-author-pack = { path = "../pack" }
unity-assetdb = { path = "../../vendor/unity-assetdb", default-features = false }
