[package]
name = "unity-sprite-author-editor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "unity-sprite-author-editor"
path = "src/main.rs"

# eframe pulls egui + a windowing backend (winit + wgpu by default).
# `rfd` provides the native file-open dialog. Both are GUI-only and stay
# isolated from the rlib (`crates/core`) consumed by the BoxcatBridge cdylib.
[dependencies]
unity-sprite-author = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.15"
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
