[package]
name = "unity-sprite-author-editor"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "unity-sprite-author-editor"
path = "src/main.rs"

# eframe pulls egui + a windowing backend (winit + glow). `rfd` provides the
# native file-open dialog. All GUI-only deps; isolated from the rlib (`crates/core`)
# consumed by the BoxcatBridge cdylib.
#
# `persistence` pulls in `directories` + `ron` so eframe can write a settings
# file under the OS-standard app-data dir. We use it for `Preferences` (see
# `preferences.rs`) — eframe handles the round-trip via `eframe::set_value` /
# `eframe::get_value` keyed by `eframe::APP_KEY`.
[dependencies]
unity-sprite-author = { path = "../core" }
unity-sprite-author-pack = { path = "../pack" }  # texturepacker_cmd resolver
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

# Native macOS menubar. Other platforms keep the in-window egui menu_bar.
# `muda` plugs into the NSApplication that winit/eframe sets up;
# `init_for_nsapp()` is called from `App::new` (main thread, post-NSApp init).
# See `menubar.rs` for the dispatch layer.
[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.15"
